Work-around for perfect-scrollbar issue, fix alert z-index

--- a/src/assets/styles/_grid.scss
+++ b/src/assets/styles/_grid.scss
@@ -25,6 +25,11 @@ html, body {
     flex-direction: column;
     overflow: hidden;
     position: relative;
+    border: 1px solid $app-table-bordercolor;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: $clr-default-borderradius;
+    border-top-right-radius: $clr-default-borderradius;
 }
 
 .segment {
@@ -33,13 +38,7 @@ html, body {
     -webkit-overflow-scrolling: touch;
 
     background-color: $app-table-bgcolor;
-    border: 1px solid $app-table-bordercolor;
     position: relative;
-
-    &:last-child {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-    }
 }
 
 .action-bar {
@@ -50,9 +49,7 @@ html, body {
     height: 1.5rem;
     padding: 0.25rem $clr-table-cellpadding calc(0.25rem - 1px);
     background-color: $clr-thead-bgcolor;
-    border: 1px solid $app-table-bordercolor;
-    border-bottom: none;
-    border-radius: $clr-default-borderradius $clr-default-borderradius 0 0;
+    border-bottom: 1px solid $app-table-bordercolor;
 
     > div:not(:last-child) {
         margin-right: 0.25rem;
@@ -63,6 +60,7 @@ html, body {
     .column {
         margin: 0;
         max-width: 100%;
+        border: none;
     }
 
     .segment {
